<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.usc.csci310.focus.focus.presentation.schedule.ScheduleList"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/scheduleListLayout"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:orientation="vertical"
        >
        <ListView
            android:id="@+id/scheduleListView"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ListView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:layout_gravity="bottom|right">

        </android.support.design.widget.FloatingActionButton>
    </FrameLayout>
</LinearLayout>
