<resources>
    <string name="app_name">Focus</string>
    <string name="action_settings">Settings</string>
    <string name="notification_service_label">Focus! Blocker</string>
    <string name="textview">TextView</string>
    <string name="appicon">appicon</string>
    <string name="profilename">ProfileName</string>
    <string name="start_time">Start Time</string>
    <string name="duration">Duration</string>
    <string name="add_profile_text">Profile</string>
    <string name="create_schedule_days">Days</string>
    <string name="add_profiles">Add</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">Sa</string>
    <string name="repeat_weekly">Repeat Weekly</string>
    <string name="set_schedule_name">Schedule Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_schedule">Schedule</string>

    <string name="edit_schedule_name">New Schedule Name</string>
    <string name="add_usage_test">Add Usage</string>
    <string name="zero">0</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
</resources>
