...
    android:background="#fff"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/schedule_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textSize="20sp"
...
            android:layout_height="@dimen/standard_button"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/ic_delete_forever_black_24dp"
            android:background="@color/white"/>

        <ImageButton
            android:id="@+id/add_profile_button"
            android:layout_width="@dimen/standard_button"
            android:layout_height="@dimen/standard_button"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:background="@color/white"/>
    </RelativeLayout>
...
