<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.usc.csci310.focus.focus.presentation.schedule.CreateScheduleDialog">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/create_schedule_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/set_schedule_name" />

</LinearLayout>
